[project]
name = "toolmeta_harvester"
version = "0.1.0-dev"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.0",
    "gxformat2>=0.21.0",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "psycopg[binary]>=3.3.2",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "sqlalchemy>=2.0.45",
]
