[project]
name = "toolmeta_harvester"
version = "0.1.0-dev"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "dynaconf>=3.2.12",
    "lxml>=6.0.2",
    "psycopg[binary]>=3.3.2",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utils>=0.42.1",
    "toolmeta-models @ git+https://github.com/EOSC-Data-Commons/toolmeta-models.git@main",
]
